# sgemm-bi

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
docs/: usage-guide.md
examples/: deterministic_training.rs
examples/capi/: smoke.c
include/: sgemm_bi.h
kernels/: casts.cu  prelude.cuh  sgemm_bi.cu
python/: .gitignore  Cargo.toml  README.md  pyproject.toml
python/examples/: train_deterministic.py
python/python/sgemm_bi/: __init__.py  _sgemm_bi.pyi  torch.py
python/src/: lib.rs
python/tests/: test_torch.py
src/: capi.rs  dispatch.rs  dtype.rs  engine.rs  error.rs  kernels.rs  lib.rs
tests/: contracts.rs  tensor_cores.rs
tests/common/: mod.rs
